--- a/BlazorPeliculas/Client/Pages/Actores/CrearActor.razor
+++ b/BlazorPeliculas/Client/Pages/Actores/CrearActor.razor
@@ -1,7 +1,14 @@
 ﻿@page "/actores/crear"
 
-<h3>CrearActor</h3>
+<h3>Crear Actor</h3>
+
+<FormularioActores OnValidSubmit="Crear" Actor="Actor" />
 
 @code {
+    private Actor Actor = new Actor();
 
+    void Crear()
+    {
+        Console.WriteLine("crear actor");
+    }
 }
