--- a/BlazorPeliculas/Client/Pages/Actores/EditarActor.razor
+++ b/BlazorPeliculas/Client/Pages/Actores/EditarActor.razor
@@ -1,7 +1,25 @@
 ﻿@page "/actores/editar/{ActorId:int}"
 
-<h3>EditarActor</h3>
+<h3>Editar Actor</h3>
+
+<FormularioActores Actor="Actor" OnValidSubmit="Editar" />
 
 @code {
     [Parameter] public int ActorId { get; set; }
+    Actor Actor = new Actor();
+
+    protected override void OnInitialized()
+    {
+        Actor = new Actor()
+            {
+                Id = ActorId,
+                Nombre = "Felipe",
+                FechaNacimiento = DateTime.Today
+            };
+    }
+
+    private void Editar()
+    {
+        Console.WriteLine("Editando al actor");
+    }
 }
