--- a/BlazorPeliculas/Client/wwwroot/css/app.css
+++ b/BlazorPeliculas/Client/wwwroot/css/app.css
@@ -103,3 +103,55 @@ a, .btn-link {
     .loading-progress-text:after {
         content: var(--blazor-load-percentage-text, "Loading");
     }
+
+.form-markdown {
+    display: flex;
+}
+
+    .form-markdown textarea {
+        width: 500px;
+        height: 500px;
+        margin-right: 15px;
+    }
+
+    .form-markdown .markdown-container {
+        border: 1px dashed black;
+        width: 500px;
+        height: 500px;
+    }
+
+.selector-multiple {
+    display: flex;
+}
+
+.selectable-ul {
+    height: 200px;
+    overflow-y: auto;
+    list-style-type: none;
+    width: 170px;
+    padding: 0;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+    .selectable-ul li {
+        cursor: pointer;
+        border-bottom: 1px dashed #eee;
+        padding: 2px 10px;
+        font-size: 14px;
+    }
+
+        .selectable-ul li:hover {
+            background-color: #08c;
+        }
+
+.selector-multiple-botones {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5px;
+}
+
+    .selector-multiple-botones button {
+        margin: 5px;
+    }
