Se completo udidad 6. Comunicándonos con el Back-End - HTTP - Entity Framework Core

--- a/BlazorPeliculas/Client/Pages/Actores/CrearActor.razor
+++ b/BlazorPeliculas/Client/Pages/Actores/CrearActor.razor
@@ -1,4 +1,7 @@
 ﻿@page "/actores/crear"
+@inject NavigationManager navigationManager
+@inject IRepositorio repositorio
+@inject SweetAlertService swal
 
 <h3>Crear Actor</h3>
 
@@ -7,8 +10,18 @@
 @code {
     private Actor Actor = new Actor();
 
-    void Crear()
+    private async Task Crear()
     {
-        Console.WriteLine("crear actor");
+        var httpResponse = await repositorio.Post("api/actores", Actor);
+
+        if (httpResponse.Error)
+        {
+            var mensajeError = await httpResponse.ObtenerMensajeError();
+            await swal.FireAsync("Error", mensajeError, SweetAlertIcon.Error);
+        }
+        else
+        {
+            navigationManager.NavigateTo("actores");
+        }
     }
 }
