--- a/BlazorPeliculas/Client/Shared/ListadoGenerico.razor
+++ b/BlazorPeliculas/Client/Shared/ListadoGenerico.razor
@@ -25,9 +25,16 @@ else if (Listado.Count == 0)
 }
 else
 {
-    @foreach (var elemento in Listado)
+    if (HayRegistros is not null)
     {
-        @HayRegistros(elemento)
+        @foreach (var elemento in Listado)
+        {
+            @HayRegistros(elemento)
+        }
+    }
+    else
+    {
+        @HayRegistrosCompleto
     }
 }
 
@@ -40,6 +47,9 @@ else
 
     [Parameter]
     public RenderFragment<Titem> HayRegistros { get; set; } = null!;
+    
+    [Parameter]
+    public RenderFragment HayRegistrosCompleto { get; set; } = null!;
 
     [Parameter]
     [EditorRequired]
