--- a/BlazorPeliculas/Client/Shared/PeliculaIndividual.razor
+++ b/BlazorPeliculas/Client/Shared/PeliculaIndividual.razor
@@ -6,7 +6,7 @@
         <a href="@urlPelicula" class="text-decoration-none">@Pelicula.Titulo</a>
     </p>
     <div>
-        <a class="btn btn-info">Editar</a>
+        <a class="btn btn-info" href="peliculas/editar/@Pelicula.Id">Editar</a>
         <button type="button" class="btn btn-danger" @onclick=@(() => EliminarPelicula.InvokeAsync(Pelicula))>Borrar</button>
     </div>
 </div>
@@ -26,6 +26,6 @@
 
     protected override void OnInitialized()
     {
-        urlPelicula = "pelicula/";
+        urlPelicula = $"pelicula/{Pelicula.Id}/{Pelicula.Titulo.Replace(" ", "-")}";
     }
 }
