--- a/BlazorPeliculas/Client/Pages/Generos/EditarGenero.razor
+++ b/BlazorPeliculas/Client/Pages/Generos/EditarGenero.razor
@@ -1,26 +1,60 @@
 ﻿@page "/generos/editar/{GeneroId:int}"
 @inject NavigationManager navigationManager
+@inject IRepositorio repositorio
+@inject SweetAlertService swal
 
 <h3>Editar Género</h3>
 
-<FormularioGenero @ref="formularioGenero" Genero="Genero" OnValidSubmit="Editar" />
+@if (Genero is null)
+{
+    <p>Cargando...</p>
+}
+else
+{
+    <FormularioGenero @ref="formularioGenero" Genero="Genero" OnValidSubmit="Editar" />
+}
 
 @code {
     [Parameter] public int GeneroId { get; set; }
     private Genero? Genero;
     private FormularioGenero? formularioGenero;
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        Genero = new Genero() { Id = GeneroId, Nombre = "Comedia" };
+        var respuestaHTTP = await repositorio.Get<Genero>($"api/generos/{GeneroId}");
+
+        if (respuestaHTTP.Error)
+        {
+            if (respuestaHTTP.HttpResponseMessage.StatusCode == System.Net.HttpStatusCode.NotFound)
+            {
+                navigationManager.NavigateTo("generos");
+            }
+            else
+            {
+                var mensajeError = await respuestaHTTP.ObtenerMensajeError();
+                await swal.FireAsync("Error", mensajeError, SweetAlertIcon.Error);
+            }
+        }
+        else
+        {
+            Genero = respuestaHTTP.Response;
+        }
     }
 
-    private void Editar()
+    private async Task Editar()
     {
-        formularioGenero!.FormularioPosteadoConExito = true;
-        Console.WriteLine("Editando Género de Película");
-        Console.WriteLine($"Id: {Genero!.Id}");
-        Console.WriteLine($"Nombre: {Genero.Nombre}");
-        navigationManager.NavigateTo("generos");
+        var respuestaHTTP = await repositorio.Put("api/generos", Genero);
+
+        if (respuestaHTTP.Error)
+        {
+            var mensajeError = await respuestaHTTP.ObtenerMensajeError();
+            await swal.FireAsync("Error", mensajeError, SweetAlertIcon.Error);
+        }
+        else
+        {
+            formularioGenero!.FormularioPosteadoConExito = true;
+            navigationManager.NavigateTo("generos");
+
+        }
     }
 }
