--- a/BlazorPeliculas/Client/Pages/Peliculas/FormularioPeliculas.razor
+++ b/BlazorPeliculas/Client/Pages/Peliculas/FormularioPeliculas.razor
@@ -1,4 +1,6 @@
-﻿<EditForm Model="Pelicula" OnValidSubmit="OnValidSubmit">
+﻿@inject IRepositorio repositorio
+
+<EditForm Model="Pelicula" OnValidSubmit="OnDataAnnotationsValidated">
     <DataAnnotationsValidator />
 
     <div class="mb-3">
@@ -14,6 +16,14 @@
         <div>
             <InputCheckbox @bind-Value="Pelicula.EnCartelera" />
             <ValidationMessage For="@(() => Pelicula.EnCartelera)" />
+        </div>
+    </div>
+
+    <div class="mb-3">
+        <label>Trailer:</label>
+        <div>
+            <InputText class="form-control" @bind-Value="@Pelicula.Trailer" />
+            <ValidationMessage For="@(() => Pelicula.Trailer)" />
         </div>
     </div>
 
@@ -47,7 +57,7 @@
         <div>
             <SelectorMultipleTypeahead Context="Actor" SearchMethod="BuscarActores" ElementosSeleccionados="ActoresSeleccionados">
                 <MyListTemplate>
-                    @Actor.Nombre
+                    @Actor.Nombre / <input type="text" placeholder="Personaje" @bind="Actor.Personaje" />
                 </MyListTemplate>
                 <MyResultTemplate>
                     <img style="width: 50px;" src="@Actor.Foto" />
@@ -105,10 +115,15 @@
 
     private async Task<IEnumerable<Actor>> BuscarActores(string searchText)
     {
-        return new List<Actor>()
-        {
-            new Actor { Id = 1, Nombre = "Tom Holland", Foto = "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Tom_Holland_by_Gage_Skidmore.jpg/640px-Tom_Holland_by_Gage_Skidmore.jpg" },
-            new Actor { Id = 2, Nombre = "Tom Hanks", Foto = "https://upload.wikimedia.org/wikipedia/commons/a/a9/Tom_Hanks_TIFF_2019.jpg" }
-        };
+        var respuestaHTTP = await repositorio.Get<List<Actor>>($"api/actores/buscar/{searchText}");
+        return respuestaHTTP!.Response!;
+    }
+
+    private async Task OnDataAnnotationsValidated()
+    {
+        Pelicula.GenerosPelicula = Seleccionados.Select(x => new GeneroPelicula { GeneroId = int.Parse(x.Llave) }).ToList();
+        Pelicula.PeliculasActor = ActoresSeleccionados.Select(x => new PeliculaActor {ActorId = x.Id, Personaje = x.Personaje }).ToList();
+
+        await OnValidSubmit.InvokeAsync();
     }
 }
