--- a/BlazorPeliculas/Client/Pages/Peliculas/EditarPelicula.razor
+++ b/BlazorPeliculas/Client/Pages/Peliculas/EditarPelicula.razor
@@ -1,7 +1,9 @@
 ﻿@page "/peliculas/editar/{PeliculaId:int}"
+@using Microsoft.AspNetCore.Authorization
 @inject IRepositorio repositorio
 @inject NavigationManager navigationManager
 @inject SweetAlertService swal
+@attribute [Authorize(Roles = "admin")]
 
 <h3>Editar Película</h3>
 
