--- a/BlazorPeliculas/Client/Pages/Actores/CrearActor.razor
+++ b/BlazorPeliculas/Client/Pages/Actores/CrearActor.razor
@@ -1,7 +1,9 @@
 ﻿@page "/actores/crear"
+@using Microsoft.AspNetCore.Authorization
 @inject NavigationManager navigationManager
 @inject IRepositorio repositorio
 @inject SweetAlertService swal
+@attribute [Authorize(Roles = "admin")]
 
 <h3>Crear Actor</h3>
 
