--- a/BlazorPeliculas/Client/Pages/Actores/EditarActor.razor
+++ b/BlazorPeliculas/Client/Pages/Actores/EditarActor.razor
@@ -1,7 +1,9 @@
 ﻿@page "/actores/editar/{ActorId:int}"
+@using Microsoft.AspNetCore.Authorization
 @inject NavigationManager navigationManager
 @inject IRepositorio repositorio
 @inject SweetAlertService swal
+@attribute [Authorize(Roles = "admin")]
 
 <h3>Editar Actor</h3>
 
