--- a/BlazorPeliculas/Client/Pages/Actores/IndiceActores.razor
+++ b/BlazorPeliculas/Client/Pages/Actores/IndiceActores.razor
@@ -1,7 +1,9 @@
 ﻿@page "/actores"
+@using Microsoft.AspNetCore.Authorization
 @inject IRepositorio repositorio
 @inject NavigationManager navigationManager
 @inject SweetAlertService swal
+@attribute [Authorize(Roles = "admin")]
 
 <h3>Indice Actores</h3>
 
