--- a/BlazorPeliculas/Client/Pages/Generos/CrearGenero.razor
+++ b/BlazorPeliculas/Client/Pages/Generos/CrearGenero.razor
@@ -1,7 +1,9 @@
 ﻿@page "/generos/crear"
+@using Microsoft.AspNetCore.Authorization
 @inject NavigationManager navigationManager
 @inject IRepositorio repositorio
 @inject SweetAlertService swal
+@attribute [Authorize(Roles = "admin")]
 
 <h3>Crear Genero</h3>
 
