--- a/BlazorPeliculas/Client/Pages/Generos/EditarGenero.razor
+++ b/BlazorPeliculas/Client/Pages/Generos/EditarGenero.razor
@@ -1,7 +1,9 @@
 ﻿@page "/generos/editar/{GeneroId:int}"
+@using Microsoft.AspNetCore.Authorization
 @inject NavigationManager navigationManager
 @inject IRepositorio repositorio
 @inject SweetAlertService swal
+@attribute [Authorize(Roles = "admin")]
 
 <h3>Editar Género</h3>
 
