--- a/BlazorPeliculas/Client/Pages/Peliculas/CrearPelicula.razor
+++ b/BlazorPeliculas/Client/Pages/Peliculas/CrearPelicula.razor
@@ -1,7 +1,9 @@
 ﻿@page "/peliculas/crear"
+@using Microsoft.AspNetCore.Authorization
 @inject NavigationManager navigationManager
 @inject IRepositorio repositorio
 @inject SweetAlertService swal
+@attribute [Authorize(Roles = "admin")]
 
 <h3>Crear Película</h3>
 
