--- a/BlazorPeliculas/Client/Shared/NavMenu.razor
+++ b/BlazorPeliculas/Client/Shared/NavMenu.razor
@@ -20,30 +20,32 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="peliculas/buscar">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Filtrar Películas
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="generos">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Generos
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="actores">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Actores
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="peliculas/crear">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Crear Pelicula
-            </NavLink>
-        </div>
+        <AuthorizeView Roles="admin">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="generos">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Generos
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="actores">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Actores
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="peliculas/crear">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Crear Pelicula
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="usuarios">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Usuarios
+                </NavLink>
+            </div>
+        </AuthorizeView>
     </nav>
 </div>
 
