--- a/BlazorPeliculas/Client/Shared/PeliculaIndividual.razor
+++ b/BlazorPeliculas/Client/Shared/PeliculaIndividual.razor
@@ -5,10 +5,12 @@
     <p style="width: 225px; height: 44px; font-size: 15px; font-weight: bold">
         <a href="@urlPelicula" class="text-decoration-none">@Pelicula.Titulo</a>
     </p>
-    <div>
-        <a class="btn btn-info" href="peliculas/editar/@Pelicula.Id">Editar</a>
-        <button type="button" class="btn btn-danger" @onclick=@(() => EliminarPelicula.InvokeAsync(Pelicula))>Borrar</button>
-    </div>
+    <AuthorizeView Roles="admin">
+        <div>
+            <a class="btn btn-info" href="peliculas/editar/@Pelicula.Id">Editar</a>
+            <button type="button" class="btn btn-danger" @onclick=@(() => EliminarPelicula.InvokeAsync(Pelicula))>Borrar</button>
+        </div>
+    </AuthorizeView>
 </div>
 
 @code {
