--- a/BlazorPeliculas/Client/wwwroot/css/app.css
+++ b/BlazorPeliculas/Client/wwwroot/css/app.css
@@ -1,4 +1,4 @@
-@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 /*h1 {
     color: blue;
@@ -23,7 +23,7 @@ a, .btn-link {
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 .content {
@@ -155,3 +155,7 @@ a, .btn-link {
     .selector-multiple-botones button {
         margin: 5px;
     }
+
+.checked {
+    color: orange;
+}
